Added swag docs
